@@ -218,20 +218,6 @@ name|solr
 operator|.
 name|core
 operator|.
-name|SolrConfig
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|core
-operator|.
 name|SolrCore
 import|;
 end_import
@@ -363,20 +349,6 @@ operator|.
 name|processor
 operator|.
 name|UpdateRequestProcessorChain
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|SolrPluginUtils
 import|;
 end_import
 
@@ -738,7 +710,7 @@ operator|.
 name|getResourceLoader
 argument_list|()
 operator|.
-name|openConfig
+name|openResource
 argument_list|(
 name|configLoc
 argument_list|)
