@@ -56,20 +56,6 @@ name|solr
 operator|.
 name|core
 operator|.
-name|SolrConfig
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|core
-operator|.
 name|SolrCore
 import|;
 end_import
@@ -579,12 +565,7 @@ name|Object
 argument_list|>
 argument_list|()
 expr_stmt|;
-name|this
-operator|.
-name|propWriter
-operator|=
-operator|new
-name|SimplePropertiesWriter
+name|createPropertyWriter
 argument_list|()
 expr_stmt|;
 name|propWriter
@@ -600,6 +581,52 @@ name|handlerName
 operator|=
 literal|"dataimport"
 expr_stmt|;
+block|}
+DECL|method|createPropertyWriter
+specifier|private
+name|void
+name|createPropertyWriter
+parameter_list|()
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|core
+operator|==
+literal|null
+operator|||
+operator|!
+name|this
+operator|.
+name|core
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|isZooKeeperAware
+argument_list|()
+condition|)
+block|{
+name|propWriter
+operator|=
+operator|new
+name|SimplePropertiesWriter
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|propWriter
+operator|=
+operator|new
+name|ZKPropertiesWriter
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|DataImporter
 name|DataImporter
@@ -666,12 +693,7 @@ operator|.
 name|getSchema
 argument_list|()
 expr_stmt|;
-name|this
-operator|.
-name|propWriter
-operator|=
-operator|new
-name|SimplePropertiesWriter
+name|createPropertyWriter
 argument_list|()
 expr_stmt|;
 name|propWriter
